# CryoLens

./: .db_password  .dockerignore  .env.example  .gitignore  .railwayignore  AGENTS.md  CPA_AGENT_PROMPTS.md  CPA_AGENT_REPORT.md  Caddyfile  CryoLens-CPA-Design-Proposal.md  CryoSight_Execution_Plan.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  Dockerfile.mcp  LICENSE  LensCPA-1-Proposal.md  MCP_SERVER_PRD.md  PROJECT_RULES.md  README.md  TEAMMATE_BRIEFING.md  alembic.ini  docker-compose.yml  hero-story.md  pyproject.toml  queries.md  test.html
_app_backup/: index.html  main.py
alembic/: env.py  script.py.mako
api/: AGENTS.md  README.md  agent-search.ts  cryo-lens-dataset.ts
app/: AGENTS.md  README.md  __init__.py  bootstrap_cpa_seed.json  main.py
app/core/: config.py
app/db/: AGENTS.md  (+5 more)
corpus/: CORPUS_METHODOLOGY.md  download_parallel.py
database/: migrate_to_supabase.sh  schema.sql  schema_findings.sql  schema_hypotheses.sql  schema_protocols.sql  schema_v2.sql  seed_findings.sql  seed_paper1.sql  seed_paper1_complete.sql  seed_paper2.sql  seed_paper3.sql  seed_paper4.sql  seed_protocols.sql  seed_v2.sql
docs/: HISTORY.md  MEMORY.md  TROUBLES.md
engine/: EXTRACTION_SKILL.md  EXTRACTION_TRACKER.md  Untitled  asgi.py  db.py  mcp_server.py  models.py  test_integration.py  tools.py  tools_compounds.py
extracted_data/: COMPILED_DATABASE.json  FEASIBILITY_ASSESSMENT.md  REAL_extraction_PMC10202161.json  REAL_extraction_PMC3500404.json  extraction_001_warming_rates.json  extraction_002_major_cocktails.json  extraction_003_ccr_cwr_concentration.json  extraction_004_nanowarming_bischof.json  extraction_005_additional_formulations.json
frontend/: .env.example  .env.production  .env.server.example  AGENTS.md  DESIGN.md  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
pipeline/: discover_papers.py  extract.py  extraction_prompt.md
prompts/: build.md  plan.md
tests/: test_chunking.py  test_cryo_lens.py  test_curated_seed.py  test_extraction.py  test_health.py  test_hypotheses.py  test_knowledge_queries.py
(+96 files in other folders)
