[project]
name = "cryolens"
version = "0.1.0"
description = "CryoLens — AI-powered cryobiology knowledge engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Yicheng Wang" },
    { name = "Kenji Phang" },
]
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "claude-agent-sdk>=0.1.50",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "mcp>=1.12.0",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
extend-exclude = ["pipeline"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
